Closed Bug 119743 Opened 24 years ago Closed 24 years ago

Autocomplete doesn't work in gcc 2.96 -O2 builds

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

In gcc 2.96 builds with -O2, the autocomplete dropdown doesn't come up. This is because of a typo in my fix for bug 117276. Fix coming up.
Attached patch patchSplinter Review
r=hixie. The patch makes sense and, as a bonus, fixes the bug. :-)
cc'ing Brendan, Mike, jband; just need sr= to get this in.
Attachment #64723 - Flags: review+
Comment on attachment 64723 [details] [diff] [review] patch Damn, too many underscores makes for easily missed underscores. /be
Attachment #64723 - Flags: superreview+
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking Verified -
Status: RESOLVED → VERIFIED
Flags: testcase-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: