Bug 119743  - autocomplete doesn't work in gcc 2.96 -O2 builds.  r=hixie, sr=brendan.